--- a/styles/s.css
+++ b/styles/s.css
@@ -8,5 +8,6 @@ overflow: hidden;
 white-space: nowrap;
 width: fit-content;
 width: -moz-fit-content;
-max-width: 100vh;
+max-width: calc(100% - 10%);
+padding-top: 10px;
 }
